--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NYOTA Logo</title>
+  <title>NYOTA Project Ke</title>
   <style>
     body {
       font-family: Arial, sans-serif;
